<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:id="@+id/menu_webbookshelf">
    <item android:id="@+id/menu_sort" android:icon="@android:drawable/ic_menu_sort_alphabetically" android:title="@string/menu_sort">
		<menu>
			<group android:checkableBehavior="single">
				<item android:title="@string/descend_date" android:id="@+id/descend_date"/>
				<item android:title="@string/ascend_date" android:id="@+id/ascend_date"/>
				<item android:title="@string/descend_title" android:id="@+id/descend_title"/>
				<item android:title="@string/ascend_title" android:id="@+id/ascend_title"/>
			</group>
		</menu>
    </item>
    <item android:id="@+id/menu_filter" android:icon="@android:drawable/ic_menu_agenda" android:title="@string/menu_filter">
		<menu>
			<group android:checkableBehavior="single">
				<item android:title="@string/menu_filter_yet" android:id="@+id/filter_yet"/>
				<item android:title="@string/menu_filter_all" android:id="@+id/filter_all"/>
			</group>
		</menu>
    </item>
    </group>
</menu>
