<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/option"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/option_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="30dp" >

                <!-- バージョン -->

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lighte_green" >

                    <TextView
                        android:id="@+id/version_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/version"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:id="@+id/option_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/version"
                        android:textColor="@color/lite_gray"
                        android:textSize="15dp" />
                </TableRow>

                <!-- メールアドレス -->

                <TableRow
                    android:id="@+id/option_mail_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lighte_green" >

                    <TextView
                        android:id="@+id/address_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/option_confirm_address_title"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:id="@+id/option_confirm_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="10dp" >

                    <ScrollView
                        android:id="@+id/address_scroll"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/confirm_address"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/option_confirm_address_title"
                            android:textColor="@color/lite_gray"
                            android:textSize="15dp" />
                    </ScrollView>
                </TableRow>

                <TableRow
                    android:id="@+id/option_mail_send_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="10dp" >

                    <Button
                        android:id="@+id/addressChangeBtn"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:minWidth="120dp"
                        android:nextFocusDown="@+id/reset"
                        android:onClick="addressChangeAction"
                        android:text="@string/change" />

                    <Button
                        android:id="@+id/reset"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:minWidth="120dp"
                        android:nextFocusUp="@+id/addressChangeBtn"
                        android:onClick="resetAction"
                        android:text="@string/reset" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>