<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dl_dialog_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/lighte_green"
        android:padding="5dp"
        android:text="@string/download_confirm"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/dl_dialog_thumb"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="thumbnail"
            android:scaleType="fitCenter"
            android:src="@drawable/icon" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:id="@+id/dl_content_text"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/dl_dialog_title"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:text="title"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/dl_dialog_author"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:text="author"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/dl_dialog_distribution"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:text="distribution"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/isPurchased"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:singleLine="true"
                android:text="isPurchased"
                android:visibility="gone"
                android:textColor="@color/lighte_green"
                android:textSize="11dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/new_download_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/download"
            android:textSize="13dp" />

        <Button
            android:id="@+id/new_dl_cancel_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="13dp" />
    </LinearLayout>

</LinearLayout>