<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mail_address_regist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:scrollbars="vertical" >

            <!-- メッセージ -->

            <TextView
                android:id="@+id/regist_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="Regist message"
                android:textColor="@color/lighte_green"
                android:textSize="13dp"
                android:textStyle="bold" />

            <!-- メールアドレス入力 -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="MailAddress"
                android:textColor="@color/lite_gray" />

            <EditText
                android:id="@+id/mail_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:freezesText="true"
                android:hint="@string/option_confirm_address_title"
                android:inputType="textEmailAddress"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:gravity="right" >

                <Button
                    android:id="@+id/mail_address_send"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:minWidth="100dp"
                    android:onClick="mailSendBtnAction"
                    android:text="@string/send"
                    android:background="@drawable/gray_button"
                    android:textSize="13dp" />
            </LinearLayout>

            <!-- PIN入力 -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="PIN"
                android:textColor="@color/lite_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/pin"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:freezesText="true"
                        android:hint="PIN"
                        android:inputType="numberDecimal"
                        android:maxLength="5"
                        android:minWidth="100dp"
                        android:paddingRight="5dp"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center" >

                    <Button
                        android:id="@+id/pin_ok"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:minWidth="100dp"
                        android:onClick="pinBtnAction"
                        android:text="@string/ok"
                        android:background="@drawable/gray_button"
                        android:textSize="13dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>